fix: resize on mobile leads to loosing focus (#10)
* fix: resize on mobile leads to loosing focus

* chore: format

* style: add spacing

--- a/src/components/plugins/add/add.scss
+++ b/src/components/plugins/add/add.scss
@@ -6,7 +6,7 @@
 
   position: absolute;
   top: var(--actions-top);
-  left: var(--stylo-add-left, 0);
+  left: var(--stylo-add-left, 8px);
 
   transition: top 0.1s ease;
 
